# SBRW-Linux-Utility

./: .gitignore  README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/setup/: dxvk.rs  environment.rs  finalize.rs  mod.rs  resource.rs  validate.rs  wine.rs
src-tauri/src/types/: config.rs  error.rs  mod.rs  setup.rs  wizard.rs
src-tauri/src/utility/: launcher.rs  mod.rs  repair.rs  setting.rs  validate.rs
src-tauri/src/utils/: downloader.rs  emitter.rs  fs.rs  initialize.rs  mod.rs  process.rs
src/api/: tauri.ts
src/components/Home/: Home.tsx  Listener.tsx
src/components/Settings/: DXVKComponent.tsx  GameComponent.tsx  Settings.tsx  VariablesComponent.tsx  WineComponent.tsx
src/components/TopBar/: TopBar.tsx
src/components/Wizard/: Wizard.tsx  WizardListener.tsx
src/hooks/: useTheme.tsx
src/interfaces/: Common.tsx
src/layouts/KeyValueEditor/: KeyValueEditor.tsx
src/layouts/ProgressBar/: ProgressBar.tsx
src/layouts/Select/: Select.tsx
src/layouts/TextField/: TextField.tsx
src/layouts/Toggle/: Toggle.tsx
