[package]
name = "sbrw-linux-utility"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sbrw_linux_utility_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
thiserror = "2.0.16"
anyhow = "1.0.99"
log = "0.4.27"
toml = "0.9.5"
tauri-plugin-log = "2.7.0"
which = "8.0.0"
once_cell = "1.21.3"
